fix image overflow/size prob desquash

--- a/css/theme.css
+++ b/css/theme.css
@@ -92,7 +92,6 @@ body {
 
 .prev-img {
     display: block;
-    width: 90%;
     margin-right: auto;
     margin-left: auto;
     max-height: 4in;
